<resources>
    <string name="app_name">3_recyclerView</string>
    <string name="notifications">Notifications</string>
    <string name="roman_kamushken">Roman Kamushken</string>
    <string name="_2_days_ago">2 days ago</string>
    <string name="text1">Check out awesome updates for Android design kit for Figma. Now more screens and more categories.</string>
    <string name="_117_replays">117 REPLAYS</string>
    <string name="tina_turbina">Tina Turbina</string>
    <string name="_18_minutes_ago">18 minutes ago</string>
    <string name="text2">“into component container and with resizing constraints set????”</string>
    <string name="tomek_kuwalskij">Tomek Kuwalskij</string>
    <string name="account">Account</string>
    <string name="back">back</string>
    <string name="search">TODO</string>
    <string name="icon">icon</string>
    <string name="like">like</string>
    <string name="shopping">shopping</string>
    <string name="book">book</string>
    <string name="cart">cart</string>
    <string name="heart">heart</string>
    <string name="heart_filled">heart_filled</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="remove">Remove</string>
</resources>