<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="24dp"
        android:paddingTop="6dp"
        android:paddingEnd="24dp"
        android:paddingBottom="10dp"
        app:alignItems="center"
        app:justifyContent="space_between"
        tools:ignore="RtlSymmetry">

        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/shopping"
            android:src="@drawable/shopping" />

        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/book"
            android:src="@drawable/book_open_variant" />

        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cart"
            android:src="@drawable/cart" />

        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/heart"
            android:src="@drawable/tag_heart" />

        <FrameLayout
            android:layout_marginStart="-24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="12dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/heart_filled"
                android:src="@drawable/heart_filled" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/account"
                android:textColor="@color/linear_color"
                android:textSize="12sp" />
        </FrameLayout>

    </com.google.android.flexbox.FlexboxLayout>


</LinearLayout>




