<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        tools:ignore="MissingConstraints" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingTop="12dp"
                tools:ignore="RtlSymmetry">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/detailPhotoImageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/icon"
                    tools:src="@drawable/person_1"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/detailUserNameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:lines="1"
                        android:textColor="@color/text2"
                        android:textSize="16sp"
                        tools:text="John Smith" />

                    <com.google.android.flexbox.FlexboxLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:justifyContent="space_between"
                        app:alignItems="center"
                        >
                        <TextView
                            android:id="@+id/detailLiveYearsTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/_2_days_ago"
                            android:textColor="@color/time"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/detailSexUserTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/_2_days_ago"
                            android:layout_marginLeft="10dp"
                            android:textColor="@color/time"
                            android:textSize="14sp" />
                    </com.google.android.flexbox.FlexboxLayout>
                </LinearLayout>
            </LinearLayout>


            <TextView
                android:id="@+id/detailDescTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto_regular"
                android:lineSpacingExtra="5dp"
                android:text="@string/text1"
                android:textColor="@color/text2"
                android:textSize="16sp" />

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="12dp"
                app:justifyContent="space_between"
                app:alignItems="center"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/_117_replays"
                    android:textColor="@color/linear_color"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <ImageButton
                    android:id="@+id/detailLikeImageViewButton"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/like"
                    android:src="@drawable/thumb_up_outline" />
            </com.google.android.flexbox.FlexboxLayout>

        </LinearLayout>

    </FrameLayout>

</androidx.appcompat.widget.LinearLayoutCompat>